#704 [Bug] No padding around text in a Toast or Snackbar

--- a/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
@@ -7,7 +7,8 @@
     <StackLayout Spacing="10" Margin="20">
         <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
         <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show SnackBar"></Button>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"></Button>
+        <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"></Button>
         <Label x:Name="StatusText"></Label>
     </StackLayout>
 </pages:BasePage>
