Fix preview size for camera view on Androud (#723)
- Fix based on sample implementation for Camera2 API from Google
- https://github.com/android/camera-samples/blob/4aac9c7763c285d387194a558416a4458f29e275/CameraXTfLite/utils/src/main/java/com/example/android/camera/utils/CameraSizes.kt#L50-L78

--- a/samples/XCT.Sample/Pages/Views/CameraViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/CameraViewPage.xaml
@@ -24,6 +24,7 @@
                     IsEnabled="False"
                     Maximum="10"
                     Minimum="1"
+                    HorizontalOptions="FillAndExpand"
                     ValueChanged="ZoomSlider_ValueChanged"
                     Value="1" />
             </StackLayout>
