Add new feature to sample app

--- a/samples/XCT.Sample/Pages/SettingPage.xaml
+++ b/samples/XCT.Sample/Pages/SettingPage.xaml
@@ -26,5 +26,7 @@
 
         <Button Text="{xct:Translate Save}"
                 Command="{Binding ChangeLanguageCommand, Mode=OneTime}"/>
+
+        <Label HorizontalTextAlignment="Center" Text="{Binding AppVersion.Localized}"/>
     </StackLayout>
 </pages:BasePage>
