--- a/samples/XCT.Sample/Pages/Views/Popups/CsharpBindingPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/CsharpBindingPopup.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-           xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+           xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
            Size="{OnPlatform Android='800, 700', UWP='300, 250', iOS='250, 350'}"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.CsharpBindingPopup">
 
