--- a/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-           xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+           xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
            xmlns:uwpxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.WindowsSpecific;assembly=Xamarin.CommunityToolkit"
            Size="{OnPlatform Android='200, 200', UWP='100, 100', iOS='100, 100'}"
            Color="Transparent"
