--- a/samples/XCT.Sample/Pages/Views/Popups/NoLightDismissPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/NoLightDismissPopup.xaml
@@ -2,9 +2,19 @@
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-           Size="{OnPlatform Android='800, 800', UWP='300, 300', iOS='250, 400'}"
+           xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
            IsLightDismissEnabled="False"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.NoLightDismissPopup">
+
+    <xct:Popup.Size>
+        <OnPlatform x:TypeArguments="Size">
+            <OnPlatform.Platforms>
+                <On Platform="Android" Value="{x:Static local:PopupSize.Android}" />
+                <On Platform="UWP" Value="{x:Static local:PopupSize.UWP}" />
+                <On Platform="iOS" Value="{x:Static local:PopupSize.iOS}" />
+            </OnPlatform.Platforms>
+        </OnPlatform>
+    </xct:Popup.Size>
 
     <xct:Popup.Resources>
         <ResourceDictionary>
