--- a/samples/XCT.Sample/Pages/Views/Popups/OpenedEventSimplePopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/OpenedEventSimplePopup.xaml
@@ -2,8 +2,18 @@
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-           Size="{OnPlatform Android='800, 700', UWP='300, 250', iOS='250, 350'}"
+           xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.OpenedEventSimplePopup">
+
+    <xct:Popup.Size>
+        <OnPlatform x:TypeArguments="Size">
+            <OnPlatform.Platforms>
+                <On Platform="Android" Value="{x:Static local:PopupSize.Android}" />
+                <On Platform="UWP" Value="{x:Static local:PopupSize.UWP}" />
+                <On Platform="iOS" Value="{x:Static local:PopupSize.iOS}" />
+            </OnPlatform.Platforms>
+        </OnPlatform>
+    </xct:Popup.Size>
 
     <xct:Popup.Resources>
         <ResourceDictionary>
