--- a/samples/XCT.Sample/Pages/WelcomePage.xaml
+++ b/samples/XCT.Sample/Pages/WelcomePage.xaml
@@ -9,6 +9,7 @@
     xmlns:custom="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     x:Name="Page"
     Title="Welcome"
+    xct:BarStyle.StatusBarColor="Yellow"
     NavigationPage.BackButtonTitle="">
 
     <pages:BasePage.BindingContext>
