Update SimplePopup size.

--- a/samples/XCT.Sample/Pages/Views/Popups/SimplePopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/SimplePopup.xaml
@@ -3,17 +3,8 @@
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
            xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
+           Size="{x:Static local:PopupSize.Small}"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.SimplePopup">
-
-    <xct:Popup.Size>
-        <OnPlatform x:TypeArguments="Size">
-            <OnPlatform.Platforms>
-                <On Platform="Android" Value="{x:Static local:PopupSize.Android}" />
-                <On Platform="UWP" Value="{x:Static local:PopupSize.UWP}" />
-                <On Platform="iOS" Value="{x:Static local:PopupSize.iOS}" />
-            </OnPlatform.Platforms>
-        </OnPlatform>
-    </xct:Popup.Size>
 
     <xct:Popup.Resources>
         <ResourceDictionary>
