--- a/samples/XCT.Sample/Pages/Views/Popups/XamlBindingPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/XamlBindingPopup.xaml
@@ -4,17 +4,8 @@
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
            xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views.Popups"
            xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
+           Size="{x:Static local:PopupSize.Large}"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.XamlBindingPopup">
-
-    <xct:Popup.Size>
-        <OnPlatform x:TypeArguments="Size">
-            <OnPlatform.Platforms>
-                <On Platform="Android" Value="{x:Static local:PopupSize.Android}" />
-                <On Platform="UWP" Value="{x:Static local:PopupSize.UWP}" />
-                <On Platform="iOS" Value="{x:Static local:PopupSize.iOS}" />
-            </OnPlatform.Platforms>
-        </OnPlatform>
-    </xct:Popup.Size>
 
     <xct:Popup.BindingContext>
         <vm:XamlBindingPopupViewModel />
