--- a/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
@@ -2,9 +2,11 @@
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+           xmlns:iosxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.iOSSpecific;assembly=Xamarin.CommunityToolkit"
            xmlns:uwpxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.WindowsSpecific;assembly=Xamarin.CommunityToolkit"
            Size="{OnPlatform Android='200, 200', UWP='100, 100', iOS='100, 100'}"
            Color="Transparent"
+           iosxct:Popup.ArrowDirection="Down"
            uwpxct:Popup.BorderColor="Transparent"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.TransparentPopup">
 
