--- a/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
@@ -5,13 +5,16 @@
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SnackBarPage">
     <StackLayout Spacing="10" Margin="20">
-        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
-        <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"></Button>
-        <Button Clicked="DisplaySnackBarAnchoredClicked" Text="Show SnackBar Above the Floating Button"></Button>
+        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"/>
+        <Button Clicked="DisplayToastClicked" Text="Show toast"/>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show SnackBar"/>
         <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"></Button>
+        <Button Clicked="DisplayToastAnchoredClicked" Text="Show toast above the round button"/>
 
-        <Label x:Name="StatusText"></Label>
-        <Button x:Name="Fab" Text="+" VerticalOptions="EndAndExpand" HorizontalOptions="End" CornerRadius="20" WidthRequest="40" HeightRequest="40"/>
+        <Label x:Name="StatusText"/>
+        <Button x:Name="roundButton" 
+                Text="+" FontAttributes="Bold" FontSize="25" Padding="0"
+                VerticalOptions="EndAndExpand" HorizontalOptions="End"
+                CornerRadius="20" WidthRequest="40" HeightRequest="40"/>
     </StackLayout>
 </pages:BasePage>
