[iOS] Remove popup arrow if anchor isn't set (#854)
* Remove popup arrow if anchor isn't set

* Create PopoverArrowDirection.cs

* Create Popup.shared.cs

* Add arrow direction platform specific.

* Add arrow direction platform specific sample.

* Rename PopoverArrowDirection.cs to PopoverArrowDirection.shared.cs

* Change ArrowDirection to up

* Remove switch PopoverArrowDirection.None since default is already zero.

* Use div 2 instead of multiply by 0.5 for consistency.

Co-authored-by: Sebastian Klatte <sebastian.klatte@trust-communication.com>

--- a/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
@@ -3,9 +3,11 @@
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
            xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
            xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
+           xmlns:iosxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.iOSSpecific;assembly=Xamarin.CommunityToolkit"
            xmlns:uwpxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.WindowsSpecific;assembly=Xamarin.CommunityToolkit"
            Size="{x:Static local:PopupSize.Tiny}"
            Color="Transparent"
+           iosxct:Popup.ArrowDirection="Up"
            uwpxct:Popup.BorderColor="Transparent"
            x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.TransparentPopup">
 
