--- a/samples/XCT.Sample/App.xaml
+++ b/samples/XCT.Sample/App.xaml
@@ -3,6 +3,7 @@
     x:Class="Xamarin.CommunityToolkit.Sample.App"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     xmlns:custom="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
@@ -46,7 +47,14 @@
         </OnPlatform>
 
         <!--  Implicit styles  -->
+        <Style ApplyToDerivedTypes="True" TargetType="Page">
+            <Setter Property="xct:WindowEffect.StatusBarColor" Value="{StaticResource PrimaryColor}" />
+            <Setter Property="xct:WindowEffect.StatusBarStyle" Value="DarkContent" />
+        </Style>
+        
         <Style ApplyToDerivedTypes="True" TargetType="NavigationPage">
+            <Setter Property="xct:WindowEffect.StatusBarColor" Value="{StaticResource PrimaryColor}" />
+            <Setter Property="xct:WindowEffect.StatusBarStyle" Value="DarkContent" />
             <Setter Property="BarBackgroundColor" Value="{StaticResource PrimaryColor}" />
             <Setter Property="BarTextColor" Value="{StaticResource NavigationBarTextColor}" />
             <!--<Setter Property="ios:NavigationPage.HideNavigationBarSeparator" Value="True" />-->
